# rerun-importer-osim

./: .gitignore  README.md  pyproject.toml
src/rerun_importer_osim/: __init__.py
test_data/: test_integration_osim.py
test_data/RajagopalData/Scale/: subject_scaled_run.osim  subject_scaled_walk.osim
